特徴抽出部の実装

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -14,7 +16,8 @@
     "    \n",
     "    PATH_DATASET = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset'\n",
     "    MFCC_DIM = 39\n",
-    "    BATCH_SIZE = 1\n",
+    "    BATCH_SIZE = 30\n",
+    "    LEN_SEQ = 300\n",
     "    \n",
     "    def input(self, path_tfr, MFCC_DIM, BATCH_SIZE):\n",
     "        file_name_queue = tf.train.string_input_producer([path_tfr])\n",
@@ -23,36 +26,85 @@
     "        features = tf.parse_single_example(\n",
     "            serialized_example,\n",
     "            features={\n",
-    "                \"label\": tf.FixedLenFeature([], tf.int64),\n",
-    "                \"data\": tf.FixedLenFeature([], tf.string),\n",
+    "                'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                'data': tf.FixedLenFeature([], tf.string),\n",
     "            })\n",
+    "        \n",
+    "        datas = tf.decode_raw(features['data'], tf.float32)\n",
+    "        labels = tf.cast(features['label'], tf.int32)\n",
+    "        \n",
+    "        datas = tf.reshape(datas, [self.LEN_SEQ, MFCC_DIM])\n",
+    "        labels = tf.reshape(labels, [1])\n",
+    "\n",
     "        datas, labels = tf.train.shuffle_batch(\n",
-    "            [tf.cast(features['data'], tf.float32), tf.cast(features['label'], tf.int32)],\n",
-    "            batch_size=BATCH_SIZE,capacity=10000+MFCC_DIM*BATCH_SIZE,min_after_dequeue=10000\n",
+    "            [datas, labels],\n",
+    "            batch_size=BATCH_SIZE,capacity=1000+MFCC_DIM*BATCH_SIZE,min_after_dequeue=1000\n",
     "        )\n",
-    "        return datas, labels"
+    "            \n",
+    "        return datas, labels\n",
+    "    \n",
+    "    def train(self):\n",
+    "        x = tf.placeholder(tf.float32, shape=[None, self.LEN_SEQ, self.MFCC_DIM])\n",
+    "\n",
+    "        datas, labels = self.input(os.path.join(self.PATH_DATASET, 'train-male.tfrecords'), self.MFCC_DIM, self.BATCH_SIZE)\n",
+    "        init_op = [tf.global_variables_initializer(), tf.local_variables_initializer()]\n",
+    "        \n",
+    "        with tf.Session() as sess:\n",
+    "            sess.run(init_op)\n",
+    "            coord = tf.train.Coordinator()\n",
+    "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "            batch = sess.run([datas, labels])\n",
+    "            print(batch[1])\n",
+    "            coord.request_stop()\n",
+    "            coord.join(threads)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(<tf.Tensor 'shuffle_batch_1:0' shape=(1,) dtype=float32>,\n",
-       " <tf.Tensor 'shuffle_batch_1:1' shape=(1,) dtype=int32>)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0]\n",
+      " [11]\n",
+      " [ 5]\n",
+      " [ 8]\n",
+      " [10]\n",
+      " [10]\n",
+      " [15]\n",
+      " [ 4]\n",
+      " [18]\n",
+      " [ 7]\n",
+      " [16]\n",
+      " [21]\n",
+      " [ 8]\n",
+      " [ 7]\n",
+      " [11]\n",
+      " [ 8]\n",
+      " [21]\n",
+      " [ 6]\n",
+      " [12]\n",
+      " [ 2]\n",
+      " [14]\n",
+      " [21]\n",
+      " [18]\n",
+      " [ 6]\n",
+      " [ 5]\n",
+      " [18]\n",
+      " [21]\n",
+      " [ 6]\n",
+      " [ 0]\n",
+      " [ 8]]\n"
+     ]
     }
    ],
    "source": [
     "m = main()\n",
-    "m.input(os.path.join(m.PATH_DATASET, 'train-male.tfrecords'), m.MFCC_DIM, m.BATCH_SIZE)"
+    "#m.input(os.path.join(m.PATH_DATASET, 'train-male.tfrecords'), m.MFCC_DIM, m.BATCH_SIZE)\n",
+    "m.train()"
    ]
   }
  ],
