モデルの保存とtensorboard機能を追加しました。

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "class main(object):\n",
     "    \n",
-    "    def __init__(self, n_class, len_seq, dim_mfcc, size_batch, learning_rate, step_train, path_tfr_train,):\n",
+    "    def __init__(self, n_class, len_seq, dim_mfcc, size_batch, learning_rate, step_train, path_tfr_train, dir_log):\n",
     "        self.n_class = n_class\n",
     "        self.len_seq = len_seq\n",
     "        self.dim_mfcc = dim_mfcc\n",
@@ -23,6 +23,7 @@
     "        self.learning_rate = learning_rate\n",
     "        self.step_train = step_train\n",
     "        self.path_tfr_train = path_tfr_train\n",
+    "        self.dir_log = dir_log\n",
     "\n",
     "    #TFRecordsからデータセット取り出し\n",
     "    def input(self, path_tfr):\n",
@@ -50,28 +51,82 @@
     "        )\n",
     "            \n",
     "        return datas, labels\n",
-    "\n",
-    "    #RNNモデル\n",
-    "    def RNN(self, x):\n",
-    "        x = tf.unstack(x, self.len_seq, 1)\n",
-    "        lstm_cell = rnn.BasicLSTMCell(256, forget_bias=1.0)\n",
-    "        outputs, states = rnn.static_rnn(lstm_cell, x, dtype=tf.float32)\n",
-    "\n",
-    "        weight = tf.Variable(tf.random_normal([256, self.n_class]))\n",
-    "        bias = tf.Variable(tf.random_normal([self.n_class]))\n",
-    "\n",
-    "        return tf.matmul(outputs[-1], weight) + bias\n",
     "    \n",
+    "    #dirで指定されたパスが存在しない場合ディレクトリ作成\n",
+    "    def make_dir(self,dir,format=False):\n",
+    "        if not os.path.exists(dir):\n",
+    "            os.makedirs(dir)\n",
+    "        if format and os.path.exists(dir):\n",
+    "            shutil.rmtree(dir)\n",
+    "\n",
+    "    #tensorboardのサマリに追加する\n",
+    "    def variable_summaries(self, var):\n",
+    "        with tf.name_scope('summaries'):\n",
+    "            mean = tf.reduce_mean(var)\n",
+    "            tf.summary.scalar('mean', mean)\n",
+    "            with tf.name_scope('stddev'):\n",
+    "                stddev = tf.sqrt(tf.reduce_mean(tf.square(var - mean)))\n",
+    "            tf.summary.scalar('stddev', stddev)\n",
+    "            tf.summary.scalar('max', tf.reduce_max(var))\n",
+    "            tf.summary.scalar('min', tf.reduce_min(var))\n",
+    "            tf.summary.histogram('histogram', var)\n",
+    "        \n",
+    "    #重みベクトルを初期化して返す\n",
+    "    def variable(self, name, shape, stddev):\n",
+    "        var = tf.get_variable(name, shape=shape, initializer=tf.truncated_normal_initializer(stddev=stddev))\n",
+    "        return var\n",
+    "        \n",
+    "    #Dense\n",
+    "    def Dense(self, x, s_from, s_to, stddev, l_name):\n",
+    "        with tf.variable_scope(l_name) as scope:\n",
+    "            weights = self.variable('weights', shape=[s_from, s_to], stddev=stddev)\n",
+    "            biases = tf.get_variable('biases', shape=[s_to], initializer=tf.constant_initializer(0.0))\n",
+    "            dense = tf.nn.bias_add(tf.matmul(x, weights), biases, name=scope.name)\n",
+    "            self.variable_summaries(dense)\n",
+    "            return dense\n",
+    "        \n",
+    "    #RNN\n",
+    "    def RNN(self, x, l_name):\n",
+    "        with tf.variable_scope(l_name) as scope:\n",
+    "            x = tf.unstack(x, self.len_seq, 1)\n",
+    "            lstm_cell = rnn.BasicLSTMCell(256, forget_bias=1.0)\n",
+    "            outputs, states = rnn.static_rnn(lstm_cell, x, dtype=tf.float32)\n",
+    "            self.variable_summaries(outputs[-1])\n",
+    "            return outputs, states\n",
+    "\n",
+    "    #Model\n",
+    "    def model(self, x):\n",
+    "        rnn_outputs, rnn_states = self.RNN(x, 'rnn')\n",
+    "        dense = self.Dense(rnn_outputs[-1], s_from=256, s_to=self.n_class, stddev=0.01, l_name='dense')\n",
+    "        return dense\n",
+    "        \n",
     "    #トレーニング\n",
     "    def train(self):\n",
+    "        sess = tf.InteractiveSession()\n",
+    "        \n",
     "        x = tf.placeholder(tf.float32, shape=[None, self.len_seq, self.dim_mfcc])\n",
     "        y_ = tf.placeholder(tf.float32, shape=[None, self.n_class])\n",
     "\n",
-    "        preds = self.RNN(x)\n",
-    "        cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=preds, labels=y_))\n",
-    "        optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(cost)\n",
-    "        correct_pred = tf.equal(tf.argmax(preds, 1), tf.argmax(y_, 1))\n",
-    "        accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
+    "        preds = self.model(x)\n",
+    "        \n",
+    "        with tf.name_scope('cross_entropy'):\n",
+    "            cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=preds, labels=y_))\n",
+    "            tf.add_to_collection('losses', cross_entropy)\n",
+    "            error=tf.add_n(tf.get_collection('losses'), name='total_loss')\n",
+    "            self.variable_summaries(error)\n",
+    "\n",
+    "        with tf.name_scope('accuracy'):\n",
+    "            optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(error)\n",
+    "            correct_pred = tf.equal(tf.argmax(preds, 1), tf.argmax(y_, 1))\n",
+    "            accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
+    "            self.variable_summaries(accuracy)\n",
+    "            \n",
+    "        merged = tf.summary.merge_all()\n",
+    "        dir_log = os.path.join(self.dir_log, 'train')\n",
+    "        self.make_dir(dir_log)\n",
+    "        writer = tf.summary.FileWriter(dir_log, sess.graph)\n",
+    "        \n",
+    "        saver = tf.train.Saver(max_to_keep=1000)\n",
     "        \n",
     "        datas, labels = self.input(self.path_tfr_train)\n",
     "        labels = tf.one_hot(labels, depth=self.n_class, dtype=tf.float32)\n",
@@ -83,15 +138,25 @@
     "            sess.run(init_op)\n",
     "            coord = tf.train.Coordinator()\n",
     "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "            \n",
     "            step = 1\n",
-    "            while step * self.size_batch < n_training_iters:\n",
+    "            while step * self.size_batch <= n_training_iters:\n",
     "                batch = sess.run([datas, labels])\n",
     "                batch[1] = batch[1].reshape([-1, self.n_class])\n",
     "                sess.run(optimizer, feed_dict={x: batch[0], y_:batch[1]})\n",
     "                if step % 100 == 0:\n",
+    "                    run_options  = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
+    "                    run_metadata = tf.RunMetadata()\n",
+    "                    summary = sess.run(merged,\n",
+    "                        feed_dict={x: batch[0], y_:batch[1]},\n",
+    "                        options=run_options, run_metadata=run_metadata)\n",
+    "                    writer.add_summary(summary, step)\n",
     "                    acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
-    "                    loss = sess.run(cost, feed_dict={x: batch[0], y_: batch[1]})\n",
+    "                    loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
     "                    print('step: {} / loss: {:.6f} / acc: {:.5f}'.format(step, loss, acc))\n",
+    "                    dir_ckpt = os.path.join(self.dir_log, 'save_files')\n",
+    "                    self.make_dir(dir_ckpt)\n",
+    "                    saver.save(sess, os.path.join(dir_ckpt, 'model.ckpt'), global_step=(step))\n",
     "                step += 1\n",
     "\n",
     "            \"\"\"\n",
@@ -103,7 +168,8 @@
     "            print(\"Test Accuracy: {}\".format(test_acc))\n",
     "            \"\"\"\n",
     "            coord.request_stop()\n",
-    "            coord.join(threads)"
+    "            coord.join(threads)\n",
+    "            writer.close()"
    ]
   },
   {
@@ -115,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-1-09c15db23195>:61: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-1-e4bd8b1eee19>:103: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "\n",
       "Future major versions of TensorFlow will allow gradients to flow\n",
@@ -123,105 +189,16 @@
       "\n",
       "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
       "\n",
-      "step: 100 / loss: 3.070546 / acc: 0.06667\n",
-      "step: 200 / loss: 3.116491 / acc: 0.03333\n",
-      "step: 300 / loss: 3.114882 / acc: 0.03333\n",
-      "step: 400 / loss: 3.104908 / acc: 0.06667\n",
-      "step: 500 / loss: 3.137856 / acc: 0.03333\n",
-      "step: 600 / loss: 3.017043 / acc: 0.13333\n",
-      "step: 700 / loss: 3.086022 / acc: 0.06667\n",
-      "step: 800 / loss: 3.089572 / acc: 0.03333\n",
-      "step: 900 / loss: 3.099506 / acc: 0.00000\n",
-      "step: 1000 / loss: 3.094058 / acc: 0.03333\n",
-      "step: 1100 / loss: 3.082890 / acc: 0.10000\n",
-      "step: 1200 / loss: 3.080096 / acc: 0.03333\n",
-      "step: 1300 / loss: 3.063076 / acc: 0.03333\n",
-      "step: 1400 / loss: 3.102589 / acc: 0.03333\n",
-      "step: 1500 / loss: 3.036189 / acc: 0.00000\n",
-      "step: 1600 / loss: 3.050397 / acc: 0.13333\n",
-      "step: 1700 / loss: 3.136124 / acc: 0.03333\n",
-      "step: 1800 / loss: 3.115227 / acc: 0.03333\n",
-      "step: 1900 / loss: 3.093938 / acc: 0.06667\n",
-      "step: 2000 / loss: 3.132204 / acc: 0.06667\n",
-      "step: 2100 / loss: 3.095791 / acc: 0.06667\n",
-      "step: 2200 / loss: 3.114536 / acc: 0.03333\n",
-      "step: 2300 / loss: 3.105573 / acc: 0.00000\n",
-      "step: 2400 / loss: 3.097474 / acc: 0.10000\n",
-      "step: 2500 / loss: 3.080040 / acc: 0.06667\n",
-      "step: 2600 / loss: 3.130812 / acc: 0.03333\n",
-      "step: 2700 / loss: 3.125699 / acc: 0.03333\n",
-      "step: 2800 / loss: 3.101583 / acc: 0.00000\n",
-      "step: 2900 / loss: 3.126945 / acc: 0.00000\n",
-      "step: 3000 / loss: 3.090624 / acc: 0.00000\n",
-      "step: 3100 / loss: 3.122464 / acc: 0.00000\n",
-      "step: 3200 / loss: 3.082961 / acc: 0.06667\n",
-      "step: 3300 / loss: 3.126293 / acc: 0.00000\n",
-      "step: 3400 / loss: 3.045997 / acc: 0.10000\n",
-      "step: 3500 / loss: 3.084876 / acc: 0.03333\n",
-      "step: 3600 / loss: 3.034323 / acc: 0.03333\n",
-      "step: 3700 / loss: 3.076982 / acc: 0.06667\n",
-      "step: 3800 / loss: 3.107311 / acc: 0.03333\n",
-      "step: 3900 / loss: 3.107128 / acc: 0.00000\n",
-      "step: 4000 / loss: 3.111693 / acc: 0.06667\n",
-      "step: 4100 / loss: 3.087916 / acc: 0.03333\n",
-      "step: 4200 / loss: 3.104285 / acc: 0.10000\n",
-      "step: 4300 / loss: 3.069271 / acc: 0.03333\n",
-      "step: 4400 / loss: 3.112994 / acc: 0.00000\n",
-      "step: 4500 / loss: 3.123871 / acc: 0.00000\n",
-      "step: 4600 / loss: 3.104259 / acc: 0.10000\n",
-      "step: 4700 / loss: 3.100681 / acc: 0.00000\n",
-      "step: 4800 / loss: 3.105645 / acc: 0.00000\n",
-      "step: 4900 / loss: 3.096671 / acc: 0.03333\n",
-      "step: 5000 / loss: 3.120100 / acc: 0.06667\n",
-      "step: 5100 / loss: 3.071815 / acc: 0.10000\n",
-      "step: 5200 / loss: 3.115989 / acc: 0.00000\n",
-      "step: 5300 / loss: 3.073510 / acc: 0.16667\n",
-      "step: 5400 / loss: 3.131582 / acc: 0.00000\n",
-      "step: 5500 / loss: 3.083860 / acc: 0.06667\n",
-      "step: 5600 / loss: 3.066621 / acc: 0.13333\n",
-      "step: 5700 / loss: 3.090812 / acc: 0.10000\n",
-      "step: 5800 / loss: 3.066947 / acc: 0.00000\n",
-      "step: 5900 / loss: 3.092537 / acc: 0.03333\n",
-      "step: 6000 / loss: 3.108281 / acc: 0.00000\n",
-      "step: 6100 / loss: 3.101845 / acc: 0.00000\n",
-      "step: 6200 / loss: 3.116699 / acc: 0.10000\n",
-      "step: 6300 / loss: 3.098550 / acc: 0.03333\n",
-      "step: 6400 / loss: 3.082669 / acc: 0.06667\n",
-      "step: 6500 / loss: 3.103848 / acc: 0.00000\n",
-      "step: 6600 / loss: 3.073962 / acc: 0.10000\n",
-      "step: 6700 / loss: 3.112512 / acc: 0.06667\n",
-      "step: 6800 / loss: 3.097989 / acc: 0.03333\n",
-      "step: 6900 / loss: 3.110142 / acc: 0.03333\n",
-      "step: 7000 / loss: 3.070657 / acc: 0.03333\n",
-      "step: 7100 / loss: 3.098424 / acc: 0.13333\n",
-      "step: 7200 / loss: 3.093501 / acc: 0.00000\n",
-      "step: 7300 / loss: 3.104012 / acc: 0.00000\n",
-      "step: 7400 / loss: 3.109977 / acc: 0.03333\n",
-      "step: 7500 / loss: 3.070447 / acc: 0.03333\n",
-      "step: 7600 / loss: 3.092185 / acc: 0.00000\n",
-      "step: 7700 / loss: 3.064144 / acc: 0.10000\n",
-      "step: 7800 / loss: 3.084510 / acc: 0.06667\n",
-      "step: 7900 / loss: 3.071408 / acc: 0.10000\n",
-      "step: 8000 / loss: 3.091918 / acc: 0.00000\n",
-      "step: 8100 / loss: 3.096892 / acc: 0.00000\n",
-      "step: 8200 / loss: 3.123078 / acc: 0.00000\n",
-      "step: 8300 / loss: 3.084370 / acc: 0.10000\n",
-      "step: 8400 / loss: 3.110157 / acc: 0.03333\n",
-      "step: 8500 / loss: 3.085374 / acc: 0.06667\n",
-      "step: 8600 / loss: 3.094330 / acc: 0.06667\n",
-      "step: 8700 / loss: 3.086814 / acc: 0.06667\n",
-      "step: 8800 / loss: 3.097357 / acc: 0.06667\n",
-      "step: 8900 / loss: 3.103081 / acc: 0.03333\n",
-      "step: 9000 / loss: 3.073470 / acc: 0.03333\n",
-      "step: 9100 / loss: 3.098272 / acc: 0.03333\n",
-      "step: 9200 / loss: 3.097757 / acc: 0.00000\n",
-      "step: 9300 / loss: 3.083473 / acc: 0.00000\n",
-      "step: 9400 / loss: 3.088143 / acc: 0.03333\n",
-      "step: 9500 / loss: 3.077613 / acc: 0.06667\n",
-      "step: 9600 / loss: 3.068956 / acc: 0.13333\n",
-      "step: 9700 / loss: 3.095373 / acc: 0.00000\n",
-      "step: 9800 / loss: 3.098486 / acc: 0.00000\n",
-      "step: 9900 / loss: 3.088911 / acc: 0.00000\n"
+      "step: 100 / loss: 3.093469 / acc: 0.03333\n",
+      "step: 200 / loss: 3.091557 / acc: 0.06667\n",
+      "step: 300 / loss: 3.092114 / acc: 0.10000\n",
+      "step: 400 / loss: 3.092538 / acc: 0.03333\n",
+      "step: 500 / loss: 3.094308 / acc: 0.03333\n",
+      "step: 600 / loss: 3.091283 / acc: 0.10000\n",
+      "step: 700 / loss: 3.091805 / acc: 0.03333\n",
+      "step: 800 / loss: 3.091657 / acc: 0.10000\n",
+      "step: 900 / loss: 3.092301 / acc: 0.00000\n",
+      "step: 1000 / loss: 3.090227 / acc: 0.00000\n"
      ]
     }
    ],
@@ -232,8 +209,9 @@
     "    dim_mfcc = 39,\n",
     "    size_batch = 30,\n",
     "    learning_rate = 0.001,\n",
-    "    step_train = 10000,\n",
-    "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords'\n",
+    "    step_train = 1000,\n",
+    "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords',\n",
+    "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log'\n",
     "    )\n",
     "m.train()"
    ]
