テスト関数を追加し、変数の整理をしました。

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -15,16 +13,22 @@
     "\n",
     "class main(object):\n",
     "    \n",
-    "    def __init__(self, n_class, len_seq, dim_mfcc, size_batch, learning_rate, step_train, path_tfr_train, dir_log):\n",
+    "    def __init__(self, n_class, len_seq, dim_mfcc, batch_train, learning_rate, start_step, step_train, path_tfr_train, dir_log,\n",
+    "                batch_test, test_step, step_test, path_tfr_test):\n",
     "        self.n_class = n_class\n",
     "        self.len_seq = len_seq\n",
     "        self.dim_mfcc = dim_mfcc\n",
-    "        self.size_batch = size_batch\n",
+    "        self.batch_train = batch_train\n",
     "        self.learning_rate = learning_rate\n",
+    "        self.start_step = start_step\n",
     "        self.step_train = step_train\n",
     "        self.path_tfr_train = path_tfr_train\n",
     "        self.dir_log = dir_log\n",
-    "\n",
+    "        self.batch_test = batch_test\n",
+    "        self.test_step = test_step\n",
+    "        self.step_test = step_test\n",
+    "        self.path_tfr_test = path_tfr_test\n",
+    "        \n",
     "    #TFRecordsからデータセット取り出し\n",
     "    def input(self, path_tfr):\n",
     "        file_name_queue = tf.train.string_input_producer([path_tfr])\n",
@@ -44,9 +48,35 @@
     "        datas = tf.reshape(datas, [self.len_seq, self.dim_mfcc])\n",
     "        labels = tf.reshape(labels, [1])\n",
     "\n",
+    "        datas, labels = tf.train.batch(\n",
+    "            [datas, labels],\n",
+    "            batch_size=self.batch_test, capacity=1000+self.batch_test*self.dim_mfcc\n",
+    "        )\n",
+    "            \n",
+    "        return datas, labels\n",
+    "                \n",
+    "    #TFRecordsからデータセット取り出し(シャッフル)\n",
+    "    def input_shuffle(self, path_tfr):\n",
+    "        file_name_queue = tf.train.string_input_producer([path_tfr])\n",
+    "        reader = tf.TFRecordReader()\n",
+    "        _, serialized_example = reader.read(file_name_queue)\n",
+    "\n",
+    "        features = tf.parse_single_example(\n",
+    "            serialized_example,\n",
+    "            features={\n",
+    "                'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                'data': tf.FixedLenFeature([], tf.string),\n",
+    "            })\n",
+    "        \n",
+    "        datas = tf.decode_raw(features['data'], tf.float32)\n",
+    "        labels = tf.cast(features['label'], tf.int32)\n",
+    "        \n",
+    "        datas = tf.reshape(datas, [self.len_seq, self.dim_mfcc])\n",
+    "        labels = tf.reshape(labels, [1])\n",
+    "\n",
     "        datas, labels = tf.train.shuffle_batch(\n",
     "            [datas, labels],\n",
-    "            batch_size=self.size_batch, capacity=1000+self.size_batch*self.dim_mfcc,\n",
+    "            batch_size=self.batch_train, capacity=1000+self.batch_train*self.dim_mfcc,\n",
     "            min_after_dequeue=1000\n",
     "        )\n",
     "            \n",
@@ -77,28 +107,37 @@
     "        return var\n",
     "        \n",
     "    #Dense\n",
-    "    def Dense(self, x, s_from, s_to, stddev, l_name):\n",
+    "    def Linear(self, x, n_inputs, n_units, stddev, l_name):\n",
     "        with tf.variable_scope(l_name) as scope:\n",
-    "            weights = self.variable('weights', shape=[s_from, s_to], stddev=stddev)\n",
-    "            biases = tf.get_variable('biases', shape=[s_to], initializer=tf.constant_initializer(0.0))\n",
-    "            dense = tf.nn.bias_add(tf.matmul(x, weights), biases, name=scope.name)\n",
-    "            self.variable_summaries(dense)\n",
-    "            return dense\n",
+    "            weights = self.variable('weights', shape=[n_inputs, n_units], stddev=stddev)\n",
+    "            biases = tf.get_variable('biases', shape=[n_units], initializer=tf.constant_initializer(0.0))\n",
+    "            linear = tf.nn.bias_add(tf.matmul(x, weights), biases, name=scope.name)\n",
+    "            self.variable_summaries(linear)\n",
+    "            return linear\n",
     "        \n",
-    "    #RNN\n",
-    "    def RNN(self, x, l_name):\n",
+    "    #LSTM\n",
+    "    def LSTM(self, x, n_units, l_name):\n",
     "        with tf.variable_scope(l_name) as scope:\n",
-    "            x = tf.unstack(x, self.len_seq, 1)\n",
-    "            lstm_cell = rnn.BasicLSTMCell(256, forget_bias=1.0)\n",
+    "            lstm_cell = rnn.BasicLSTMCell(n_units, forget_bias=1.0)\n",
     "            outputs, states = rnn.static_rnn(lstm_cell, x, dtype=tf.float32)\n",
     "            self.variable_summaries(outputs[-1])\n",
     "            return outputs, states\n",
     "\n",
     "    #Model\n",
     "    def model(self, x):\n",
-    "        rnn_outputs, rnn_states = self.RNN(x, 'rnn')\n",
-    "        dense = self.Dense(rnn_outputs[-1], s_from=256, s_to=self.n_class, stddev=0.01, l_name='dense')\n",
-    "        return dense\n",
+    "        x_unstack = tf.unstack(x, self.len_seq, 1)\n",
+    "        x_unstack_rev = x_unstack[::-1]\n",
+    "\n",
+    "        lstm1 = self.LSTM(x_unstack, n_units=256, l_name='lstm1')\n",
+    "        lstm2 = self.LSTM(lstm1[0], n_units=256, l_name='lstm2')\n",
+    "        \n",
+    "        lstm_rev1 = self.LSTM(x_unstack_rev, n_units=256, l_name='lstm_rev1')\n",
+    "        lstm_rev2 = self.LSTM(lstm_rev1[0], n_units=256, l_name='lstm_rev2')\n",
+    "\n",
+    "        concatenate = tf.concat([lstm2[0][-1], lstm_rev2[0][-1]], axis=1)\n",
+    "        \n",
+    "        linear1 = self.Linear(concatenate, n_inputs=512, n_units=self.n_class, stddev=0.01, l_name='linear1')\n",
+    "        return linear1\n",
     "        \n",
     "    #トレーニング\n",
     "    def train(self):\n",
@@ -110,7 +149,7 @@
     "        preds = self.model(x)\n",
     "        \n",
     "        with tf.name_scope('cross_entropy'):\n",
-    "            cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=preds, labels=y_))\n",
+    "            cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=preds, labels=y_))\n",
     "            tf.add_to_collection('losses', cross_entropy)\n",
     "            error=tf.add_n(tf.get_collection('losses'), name='total_loss')\n",
     "            self.variable_summaries(error)\n",
@@ -128,10 +167,10 @@
     "        \n",
     "        saver = tf.train.Saver(max_to_keep=1000)\n",
     "        \n",
-    "        datas, labels = self.input(self.path_tfr_train)\n",
+    "        datas, labels = self.input_shuffle(self.path_tfr_train)\n",
     "        labels = tf.one_hot(labels, depth=self.n_class, dtype=tf.float32)\n",
     "        \n",
-    "        n_training_iters = self.step_train * self.size_batch\n",
+    "        n_training_iters = self.step_train * self.batch_train\n",
     "        init_op = [tf.global_variables_initializer(), tf.local_variables_initializer()]\n",
     "        \n",
     "        with tf.Session() as sess:\n",
@@ -139,8 +178,10 @@
     "            coord = tf.train.Coordinator()\n",
     "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
     "            \n",
-    "            step = 1\n",
-    "            while step * self.size_batch <= n_training_iters:\n",
+    "            if(not self.start_step == 1):\n",
+    "                saver.restore(sess, os.path.join(self.dir_log, 'save_files/model.ckpt-'+str(self.start_step)))\n",
+    "            step = self.start_step\n",
+    "            while step * self.batch_train <= n_training_iters:\n",
     "                batch = sess.run([datas, labels])\n",
     "                batch[1] = batch[1].reshape([-1, self.n_class])\n",
     "                sess.run(optimizer, feed_dict={x: batch[0], y_:batch[1]})\n",
@@ -159,14 +200,70 @@
     "                    saver.save(sess, os.path.join(dir_ckpt, 'model.ckpt'), global_step=(step))\n",
     "                step += 1\n",
     "\n",
-    "            \"\"\"\n",
-    "            # テスト\n",
-    "            test_len = 128\n",
-    "            test_batch = self.input(os.path.join(self.PATH_DATASET, 'test-male.tfrecords'), self.MFCC_DIM, test_len)\n",
-    "            test_data, test_label = sess.run(test_batch)\n",
-    "            test_acc = sess.run(accuracy, feed_dict={x: test_data, y: test_label})\n",
-    "            print(\"Test Accuracy: {}\".format(test_acc))\n",
-    "            \"\"\"\n",
+    "            coord.request_stop()\n",
+    "            coord.join(threads)\n",
+    "            writer.close()\n",
+    "\n",
+    "    #テスト\n",
+    "    def test(self):\n",
+    "        sess = tf.InteractiveSession()\n",
+    "        \n",
+    "        x = tf.placeholder(tf.float32, shape=[None, self.len_seq, self.dim_mfcc])\n",
+    "        y_ = tf.placeholder(tf.float32, shape=[None, self.n_class])\n",
+    "\n",
+    "        preds = self.model(x)\n",
+    "        \n",
+    "        with tf.name_scope('cross_entropy'):\n",
+    "            cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=preds, labels=y_))\n",
+    "            tf.add_to_collection('losses', cross_entropy)\n",
+    "            error=tf.add_n(tf.get_collection('losses'), name='total_loss')\n",
+    "            self.variable_summaries(error)\n",
+    "\n",
+    "        with tf.name_scope('accuracy'):\n",
+    "            optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(error)\n",
+    "            correct_pred = tf.equal(tf.argmax(preds, 1), tf.argmax(y_, 1))\n",
+    "            accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
+    "            self.variable_summaries(accuracy)\n",
+    "            \n",
+    "        merged = tf.summary.merge_all()\n",
+    "        dir_log = os.path.join(self.dir_log, 'test')\n",
+    "        self.make_dir(dir_log)\n",
+    "        writer = tf.summary.FileWriter(dir_log, sess.graph)\n",
+    "        \n",
+    "        saver = tf.train.Saver(max_to_keep=1000)\n",
+    "        \n",
+    "        datas, labels = self.input(self.path_tfr_test)\n",
+    "        labels = tf.one_hot(labels, depth=self.n_class, dtype=tf.float32)\n",
+    "        \n",
+    "        n_test_iters = self.step_test * self.batch_test\n",
+    "        init_op = [tf.global_variables_initializer(), tf.local_variables_initializer()]\n",
+    "        \n",
+    "        with tf.Session() as sess:\n",
+    "            sess.run(init_op)\n",
+    "            coord = tf.train.Coordinator()\n",
+    "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "            \n",
+    "            saver.restore(sess, os.path.join(self.dir_log, 'save_files/model.ckpt-'+str(self.test_step)))\n",
+    "            step = 1\n",
+    "            acc_all = 0.0\n",
+    "            while step * self.batch_test <= n_test_iters:\n",
+    "                batch = sess.run([datas, labels])\n",
+    "                batch[1] = batch[1].reshape([-1, self.n_class])\n",
+    "                sess.run(optimizer, feed_dict={x: batch[0], y_:batch[1]})\n",
+    "                run_options  = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
+    "                run_metadata = tf.RunMetadata()\n",
+    "                summary = sess.run(merged,\n",
+    "                    feed_dict={x: batch[0], y_:batch[1]},\n",
+    "                    options=run_options, run_metadata=run_metadata)\n",
+    "                writer.add_summary(summary, step)\n",
+    "                acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
+    "                acc_all += acc\n",
+    "                loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
+    "                print('step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(step, loss, acc))\n",
+    "                step += 1\n",
+    "            acc_all /= step - 1\n",
+    "            print('ALL_TEST_ACC: {:.5f}'.format(acc_all))\n",
+    "                \n",
     "            coord.request_stop()\n",
     "            coord.join(threads)\n",
     "            writer.close()"
@@ -181,24 +278,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-1-e4bd8b1eee19>:103: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
-      "\n",
-      "step: 100 / loss: 3.093469 / acc: 0.03333\n",
-      "step: 200 / loss: 3.091557 / acc: 0.06667\n",
-      "step: 300 / loss: 3.092114 / acc: 0.10000\n",
-      "step: 400 / loss: 3.092538 / acc: 0.03333\n",
-      "step: 500 / loss: 3.094308 / acc: 0.03333\n",
-      "step: 600 / loss: 3.091283 / acc: 0.10000\n",
-      "step: 700 / loss: 3.091805 / acc: 0.03333\n",
-      "step: 800 / loss: 3.091657 / acc: 0.10000\n",
-      "step: 900 / loss: 3.092301 / acc: 0.00000\n",
-      "step: 1000 / loss: 3.090227 / acc: 0.00000\n"
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3000\n",
+      "step: 1 / loss: 2.265119 / test_acc: 0.48000\n",
+      "step: 2 / loss: 1.541811 / test_acc: 0.60000\n",
+      "step: 3 / loss: 4.076869 / test_acc: 0.04000\n",
+      "step: 4 / loss: 2.408398 / test_acc: 0.48000\n",
+      "step: 5 / loss: 5.060159 / test_acc: 0.00000\n",
+      "step: 6 / loss: 3.490881 / test_acc: 0.12000\n",
+      "step: 7 / loss: 3.247622 / test_acc: 0.08000\n",
+      "step: 8 / loss: 3.031630 / test_acc: 0.00000\n",
+      "step: 9 / loss: 2.384178 / test_acc: 0.36000\n",
+      "step: 10 / loss: 2.130916 / test_acc: 0.00000\n",
+      "step: 11 / loss: 3.745140 / test_acc: 0.00000\n",
+      "ALL_TEST_ACC: 0.19636\n"
      ]
     }
    ],
@@ -207,13 +299,19 @@
     "    n_class = 22,\n",
     "    len_seq = 300,\n",
     "    dim_mfcc = 39,\n",
-    "    size_batch = 30,\n",
+    "    batch_train = 30,\n",
     "    learning_rate = 0.001,\n",
-    "    step_train = 1000,\n",
+    "    start_step = 1,\n",
+    "    step_train = 10000,\n",
     "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords',\n",
-    "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log'\n",
+    "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log',\n",
+    "    batch_test = 25,\n",
+    "    test_step = 3000,\n",
+    "    step_test = 11,\n",
+    "    path_tfr_test = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/test-male.tfrecords'\n",
     "    )\n",
-    "m.train()"
+    "#m.train()\n",
+    "m.test()"
    ]
   }
  ],
